# vortex

./: .gitignore  Cargo.toml  README.md
vortex-core/: Cargo.toml
vortex-core/benches/: hnsw_benchmarks.rs
vortex-core/src/: config.rs  distance.rs  error.rs  index.rs  lib.rs  segment.rs  utils.rs  vector.rs
vortex-core/src/hnsw/: builder.rs  mod.rs  node.rs
vortex-core/src/storage/: mmap_hnsw_graph_links.rs  mmap_hnsw_graph_links_tests.rs  mmap_vector_storage.rs  mmap_vector_storage_tests.rs  mod.rs
vortex-explorer/: package-lock.json  package.json  vite.config.js
vortex-explorer/src/: App.jsx  index.css  main.jsx
vortex-explorer/src/components/: AddVectorModal.jsx  CreateIndexModal.jsx  DimensionalityReducer.jsx  IndexSelector.jsx  PlotControls.jsx  Plotter.jsx  PointDetailsPanel.jsx  QueryBuilderChunk1.jsx  SearchControl.jsx  VisualizationWorkspace.jsx
vortex-explorer/src/features/: store.js
vortex-explorer/src/features/indices/: indicesSlice.js
vortex-explorer/src/features/vectors/: vectorsSlice.js
vortex-explorer/src/services/: vortexApi.js
vortex-proto/: buf.gen.yaml  buf.yaml
vortex-proto/src/proto/vortex/api/v1/: collections_service.proto  common.proto  points_service.proto  snapshots_service.proto
vortex-sdk-python/: README.md  pyproject.toml
vortex-sdk-python/scripts/: generate_grpc_stubs.py
vortex-sdk-python/tests/: test_async_client.py  test_client.py  test_conversions.py  test_models.py
vortex-sdk-python/vortex_sdk/: __init__.py  client.py  conversions.py  exceptions.py  models.py
vortex-sdk-python/vortex_sdk/_grpc/vortex/api/v1/: collections_service_pb2.py  collections_service_pb2.pyi  collections_service_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  points_service_pb2.py  points_service_pb2.pyi  points_service_pb2_grpc.py
vortex-sdk-typescript/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json
vortex-sdk-typescript/scripts/: generate_grpc_stubs.js
vortex-sdk-typescript/src/: client.ts  conversions.ts  exceptions.ts  index.ts  models.ts
vortex-sdk-typescript/src/_grpc/vortex/api/v1/: collections_service_grpc_pb.d.ts  collections_service_grpc_pb.js  collections_service_pb.d.ts  collections_service_pb.js  collections_service_pb_service.d.ts  collections_service_pb_service.js  common_pb.d.ts  common_pb.js  common_pb_service.d.ts  points_service_grpc_pb.d.ts  points_service_grpc_pb.js  points_service_pb.d.ts  points_service_pb.js  points_service_pb_service.d.ts  points_service_pb_service.js
vortex-sdk-typescript/tests/: client.test.ts  conversions.test.ts  models.test.ts
vortex-server/: Cargo.toml  build.rs
vortex-server/src/: config.rs  error.rs  grpc_api.rs  handlers.rs  lib.rs  main.rs  models.rs  payload_index.rs  persistence.rs  snapshot_manager.rs  state.rs  wal_integration_tests.rs  wal_manager.rs
vortex-server/src/grpc_services/: collections_service.rs  mod.rs  points_service.rs  snapshots_service.rs
vortex-server/src/wal/: mmap_utils.rs  mod.rs  segment.rs  wal_manager.rs
vortex-server/tests/: grpc_api_integration.rs  wal_integration.rs
vortex-server/vortex_data/: test-index.vortex  test-index2.meta.json  test-index2.vortex
vortex_sdk/: client.py
