[package]
name = "vortex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1.15.0", features = ["derive"] }
# bincode = "1.3" # Replaced by mmap for core HNSW persistence
log = "0.4"
memmap2 = "0.9.5"
ndarray = { version = "0.15", features = ["serde"] } # Enabled serde feature
# node = "0.0.1-pre.1" # Purpose TBD, potentially removable
parking_lot = "0.12" # Review if still needed
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added serde_json
thiserror = "1.0"
tracing = "0.1"
tokio = { workspace = true, features = ["sync"] } # Added for RwLock
futures = { workspace = true } # Added for block_on

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] } # Needed for async benchmarks, keep full features here
tempfile = "3.10" # Or use workspace version if available and suitable
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hnsw_benchmarks"
harness = false
