[package]
name = "vortex-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vortex-core = { path = "../vortex-core" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true } # Keep log facade dep even if using tracing directly
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }